fixed html <pre> overflows when dealing with crappy code

--- a/style.css
+++ b/style.css
@@ -39,6 +39,15 @@ h3 {
     margin: 0;
 }
 
+pre {
+    white-space: pre-wrap; /* CSS 3 */
+    white-space: -moz-pre-wrap; /* Mozilla depuis 1999 */
+    white-space: -pre-wrap; /* Opera 4 à 6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* IE 5.5+ */
+    overflow: auto;/* IE 6 */
+}
+
 .prettyprint {
     text-align: left;
 }
